@@ -30,8 +30,10 @@ AM_CFLAGS = @AIDE_DEFS@ -W -Wall -g
 
 CLEANFILES = conf_yacc.h conf_yacc.c conf_lex.c db_lex.c *~
 
-INCLUDES = -I$(top_srcdir) -I$(top_srcdir)/include -I$(top_srcdir)/src \
-	-I$(top_builddir)/src
+AM_CPPFLAGS = -I$(top_srcdir) \
+			  -I$(top_srcdir)/include \
+			  -I$(top_srcdir)/src \
+			  -I$(top_builddir)/src
 
 aide_SOURCES =	aide.c		\
 		base64.c	\
