@@ -2,6 +2,8 @@
 	* configure.in:
 	  - fixed "suspicious cache-id" warnings
 	  - removed 'AC_CONFIG_MACRO_DIR' macro
+	* src/Makefile.am:
+	  - replaced INCLUDES with AM_CPPFLAGS
 
 2013-05-16	Hannes von Haugwitz <hannes@vonhaugwitz.com>
 	* Handle tilde (~) in database paths and report urls
